Added links to images

--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@
  div>h2>a {
    color: white;
    text-decoration: none;
- }
+  }
 
  #about-me>p {
    width: 70%;
@@ -310,6 +310,7 @@
  .project-img {
    width: 75%;
    margin-bottom: 5%;
+   cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:20px;'><text y='50%'>🖱️</text></svg>") 16 0, auto;
  }
 
  .project-description>p {
@@ -362,8 +363,8 @@
  }
 
  .project-description>h2>a:hover {
-   cursor: pointer;
    color: #FBAB6A;
+   cursor: pointer;
  }
 
  .project-description>h2:hover {
