--- a/style.css
+++ b/style.css
@@ -309,6 +309,8 @@
 
  .project-img {
    width: 75%;
+   height: auto;
+   object-fit: cover;
    margin-bottom: 5%;
    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:20px;'><text y='50%'>🖱️</text></svg>") 16 0, auto;
  }
