--- a/style.css
+++ b/style.css
@@ -8,649 +8,649 @@
  https://codepen.io/denic/pen/GRoOxbM
  ****************************/
  html {
-   box-sizing: border-box;
-   hyphens: auto;
-   letter-spacing: 0.06em;
-   text-rendering: optimizeLegibility;
-   font-feature-settings: "kern";
-   text-indent: 7.5%;
-   overflow-y: scroll;
-   overflow-x: hidden;
-   scroll-behavior: smooth;
+  box-sizing: border-box;
+  hyphens: auto;
+  letter-spacing: 0.06em;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: "kern";
+  text-indent: 7.5%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h2>a,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+p,
+pre,
+blockquote,
+figure,
+figcaption,
+hr,
+dl,
+dd {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  font-family: 'Special Elite', cursive;
+  color: var(--custom-colour);
+  background: black;
+}
+
+li>a {
+  color: #1A0903;
+  text-decoration: none;
+}
+
+:root {
+  --custom-colour: #1A0903;
+}
+
+.light-orange {
+  --custom-colour: #FBAB6A;
+  color: var(--custom-colour);
+}
+
+.dark-orange {
+  --custom-colour: #FE8927;
+  color: var(--custom-colour);
+}
+
+.darker-orange {
+  --custom-colour: #F48025;
+  color: var(--custom-colour);
+}
+
+.brown {
+  --custom-colour: #8C482C;
+  background: var(--custom-colour);
+  padding: 0.1vw;
+}
+
+.brick {
+  --custom-colour: #7F2611;
+  color: var(--custom-colour);
+}
+
+.dark-brown {
+  --custom-colour: #55190B;
+  color: var(--custom-colour);
+}
+
+ul {
+  list-style: none;
+}
+
+input,
+textarea,
+select,
+button {
+  color: inherit;
+  font: inherit;
+  letter-spacing: inherit;
+}
+
+input[type="text"],
+textarea {
+  width: 100%;
+}
+
+input,
+textarea,
+button {
+  border: 1px solid gray;
+}
+
+button {
+  padding: 0.75em 1em;
+  line-height: inherit;
+  border-radius: 0;
+  background-color: transparent;
+}
+
+button * {
+  pointer-events: none;
+}
+
+img,
+iframe,
+video,
+object,
+embed {
+  display: block;
+  max-width: 100%;
+}
+
+svg {
+  max-width: 100%;
+}
+
+[hidden] {
+  opacity: 0;
+  visibility: hidden;
+}
+
+[tabindex="-1"] {
+  outline: none !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+nav>ul,
+h2>a {
+  font-family: 'Merriweather', serif;
+  font-weight: 700;
+  letter-spacing: 0.075em;
+}
+
+header {
+  margin-top: 10%;
+  display: flex;
+}
+
+nav {
+  width: 60%;
+  display: block;
+  margin: 27% auto 5% auto;
+}
+
+nav>ul {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  width: 100%;
+  padding: 0.2vw;
+  text-indent: 0;
+  border: 0.1vw solid #FBAB6A;
+  border-radius: 0.5em;
+  box-shadow: 0.1vw 0.1vw #7F2611, 0.2vw 0.2vw #7F2611, 0.3vw 0.3vw #7F2611;
+  --custom-colour: #FBAB6A;
+  background: var(--custom-colour);
+}
+
+li {
+  line-height: 1.5;
+  width: 33.3%;
+  text-align: center;
+  font-size: 2vw;
+  border: 0vw solid #7F2611;
+}
+
+li>a:hover {
+  color: white;
+  font-weight: 300;
+}
+
+#wrapper {
+  display: block;
+  position: absolute;
+  width: 100%;
+  margin: 5% auto;
+}
+
+.typing-demo {
+  margin: auto;
+  width: 18.5%;
+  margin-top: 2%;
+  animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  color: white;
+  text-indent: 0;
+  border-right: 0.25vw solid;
+  font-size: 2.5vw;
+}
+
+.typing-demo:first-of-type {
+  width: 36.5%;
+}
+
+.typing-demo:last-of-type {
+  display: none;
+}
+
+section {
+  color: white;
+}
+
+section>div {
+  padding: 6% 0.5% 0.5% 0.5%;
+  width: 60%;
+  display: block;
+  margin: 0 auto 7.5% auto;
+}
+
+section>div:hover {
+  border-width: 0.15vw;
+  border-style: solid;
+  border-image: linear-gradient(to bottom,
+      #7f2611,
+      #8c482c,
+      #f48025) 1 100%;
+}
+
+hr {
+  border: 0;
+  height: 0.4vw;
+  width: 60%;
+  background: linear-gradient(to right,
+      #7f2611,
+      #8c482c,
+      #f48025);
+  margin: 5% auto;
+  opacity: 0.5;
+}
+
+div>h1 {
+  font-size: 2.75vw;
+}
+
+div>h2 {
+  font-size: 2.5vw;
+}
+
+div>h2>a {
+  color: white;
+  text-decoration: none;
  }
 
- *,
- *::before,
- *::after {
-   box-sizing: inherit;
- }
+#about-me>p {
+  width: 70%;
+  display: block;
+  font-size: 1.5vw;
+  text-indent: 0;
+  margin: 1.5% auto;
+}
 
- body,
- h1,
- h2,
- h2>a,
- h3,
- h4,
- h5,
- h6,
- ul,
- ol,
- li,
- p,
- pre,
- blockquote,
- figure,
- figcaption,
- hr,
- dl,
- dd {
-   margin: 0;
-   padding: 0;
- }
+#about-me>p:last-of-type {
+  width: 75%;
+}
 
- body {
-   min-height: 100vh;
-   scroll-behavior: smooth;
-   text-rendering: optimizeSpeed;
-   line-height: 1.5;
-   font-family: 'Special Elite', cursive;
-   color: var(--custom-colour);
-   background: black;
- }
+.project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+  margin-left: auto;
+}
 
- li>a {
-   color: #1A0903;
-   text-decoration: none;
- }
+.slide-img {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
- :root {
-   --custom-colour: #1A0903;
- }
+.project-img {
+  width: 75%;
+  height: auto;
+  object-fit: cover;
+  margin-bottom: 5%;
+  cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:20px;'><text y='50%'>🖱️</text></svg>") 16 0, auto;
+}
 
- .light-orange {
-   --custom-colour: #FBAB6A;
-   color: var(--custom-colour);
- }
+.project-description>p {
+  text-indent: 0;
+  margin-top: 1%;
+  width: 95%;
+  font-size: 1.4vw;
+  font-family: 'Judson', serif;
+}
 
- .dark-orange {
-   --custom-colour: #FE8927;
-   color: var(--custom-colour);
- }
+.hidden {
+  position: absolute;
+  width: 1px;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+  white-space: nowrap;
+}
 
- .darker-orange {
-   --custom-colour: #F48025;
-   color: var(--custom-colour);
- }
+.slide-img>button {
+  cursor: pointer;
+  color: white;
+  position: relative;
+  padding: 1vw;
+  margin: 0 0.5%;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-width: 0vw;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  text-decoration: none;
+  -webkit-user-select: none;
+}
 
- .brown {
-   --custom-colour: #8C482C;
-   background: var(--custom-colour);
-   padding: 0.1vw;
- }
+.slide-img>.prev {
+  border-radius: 3px 0 0 3px;
+}
 
- .brick {
-   --custom-colour: #7F2611;
-   color: var(--custom-colour);
- }
+.slide-img>button:hover {
+  background: #FBAB6A;
+  color: #1A0903;
+}
 
- .dark-brown {
-   --custom-colour: #55190B;
-   color: var(--custom-colour);
- }
+.project-description>h2 {
+  transition: all 0.2s ease-in-out;
+}
 
- ul {
-   list-style: none;
- }
+.project-description>h2>a:hover {
+  color: #FBAB6A;
+  cursor: pointer;
+}
 
- input,
- textarea,
- select,
- button {
-   color: inherit;
-   font: inherit;
-   letter-spacing: inherit;
- }
+.project-description>h2:hover {
+  animation: swingX 0.75s ease;
+  animation-iteration-count: 1;
+}
 
- input[type="text"],
- textarea {
-   width: 100%;
- }
+.scroll-up {
+  border: solid white;
+  color: white;
+  cursor: pointer;
+  border-width: 0 0.3vw 0.3vw 0;
+  display: block;
+  position: fixed;
+  bottom: 10vw;
+  left: 90vw;
+  padding: 0.3vw;
+  margin: 0 0 0 0.45%;
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
 
- input,
- textarea,
- button {
-   border: 1px solid gray;
- }
+.scroll-up:first-of-type {
+  border-width: 0 0.6vw 0.6vw 0;
+  animation: swingY 2s ease infinite;
+  padding: 0.6vw;
+  bottom: 12vw;
+  margin: 0;
+}
 
- button {
-   padding: 0.75em 1em;
-   line-height: inherit;
-   border-radius: 0;
-   background-color: transparent;
- }
+.scroll-up:hover {
+  border-color: #FBAB6A;
+  -webkit-animation-play-state: paused;
+  -moz-animation-play-state: paused;
+  -o-animation-play-state: paused;
+  animation-play-state: paused;
+}
 
- button * {
-   pointer-events: none;
- }
+#contacts {
+  border-width: 0;
+  position: relative;
+  bottom: 0;
+}
 
- img,
- iframe,
- video,
- object,
- embed {
-   display: block;
-   max-width: 100%;
- }
+#contacts>h3 {
+  text-align: center;
+  text-indent: 0;
+  margin-bottom: 2%;
+  font-size: 2vw;
+}
 
- svg {
-   max-width: 100%;
- }
+.social-media {
+  display: flex;
+  text-indent: 0;
+  align-content: center;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+}
 
- [hidden] {
-   opacity: 0;
-   visibility: hidden;
- }
+.social-media>li {
+  display: inline-block;
+  vertical-align: middle;
+  width: 20%;
+}
 
- [tabindex="-1"] {
-   outline: none !important;
- }
+svg {
+  stroke: white;
+  padding: 0.2vw;
+  width: 100%;
+  cursor: pointer;
+  transition: 0.4s ease;
+}
 
- h1,
- h2,
- h3,
- h4,
- h5,
- h6,
- nav>ul,
- h2>a {
-   font-family: 'Merriweather', serif;
-   font-weight: 700;
-   letter-spacing: 0.075em;
- }
+h3>svg {
+  cursor: auto;
+  width: 5.5%;
+  animation: spin 800ms ease infinite;
+  margin-bottom: 2%;
+}
 
- header {
-   margin-top: 10%;
-   display: flex;
- }
+svg:hover {
+  stroke: #f48025;
+}
 
- nav {
-   width: 60%;
-   display: block;
-   margin: 27% auto 5% auto;
- }
+#discord {
+  transition: 0.4s ease;
+  padding: 0.1vw;
+}
 
- nav>ul {
-   display: flex;
-   margin-left: auto;
-   align-items: center;
-   justify-content: center;
-   vertical-align: middle;
-   width: 100%;
-   padding: 0.2vw;
-   text-indent: 0;
-   border: 0.1vw solid #FBAB6A;
-   border-radius: 0.5em;
-   box-shadow: 0.1vw 0.1vw #7F2611, 0.2vw 0.2vw #7F2611, 0.3vw 0.3vw #7F2611;
-   --custom-colour: #FBAB6A;
-   background: var(--custom-colour);
- }
+#discord>svg>path:hover {
+  fill: #f48025;
+}
 
- li {
-   line-height: 1.5;
-   width: 33.3%;
-   text-align: center;
-   font-size: 2vw;
-   border: 0vw solid #7F2611;
- }
+.active {
+  animation: show .5s;
+  animation-fill-mode: both;
+}
 
- li>a:hover {
-   color: white;
-   font-weight: 300;
- }
+.first {
+  animation: none;
+}
 
- #wrapper {
-   display: block;
-   position: absolute;
-   width: 100%;
-   margin: 5% auto;
+@keyframes spin {
+ to {
+   transform: rotate(360deg);
  }
+}
 
- .typing-demo {
-   margin: auto;
-   width: 18.5%;
-   margin-top: 2%;
-   animation: typing 2s steps(22), blink .5s step-end infinite alternate;
-   white-space: nowrap;
-   overflow: hidden;
-   color: white;
-   text-indent: 0;
-   border-right: 0.25vw solid;
-   font-size: 2.5vw;
+@keyframes show {
+ from {
+     transform: scale(0.9);
+     opacity: 0;
  }
+ to {
+     transform: scale(1);
+     opacity: 1;
+ }
+}
 
- .typing-demo:first-of-type {
-   width: 36.5%;
- }
- 
- .typing-demo:last-of-type {
-   display: none;
- }
- 
- section {
-   color: white;
- }
-
- section>div {
-   padding: 6% 0.5% 0.5% 0.5%;
-   width: 60%;
-   display: block;
-   margin: 0 auto 7.5% auto;
- }
-
- section>div:hover {
-   border-width: 0.15vw;
-   border-style: solid;
-   border-image: linear-gradient(to bottom,
-       #7f2611,
-       #8c482c,
-       #f48025) 1 100%;
- }
-
- hr {
-   border: 0;
-   height: 0.4vw;
-   width: 60%;
-   background: linear-gradient(to right,
-       #7f2611,
-       #8c482c,
-       #f48025);
-   margin: 5% auto;
-   opacity: 0.5;
- }
-
- div>h1 {
-   font-size: 2.75vw;
- }
-
- div>h2 {
-   font-size: 2.5vw;
- }
-
- div>h2>a {
-   color: white;
-   text-decoration: none;
+@keyframes swingX {
+  15% {
+    transform: translateX(2.5px);
   }
 
- #about-me>p {
-   width: 70%;
-   display: block;
-   font-size: 1.5vw;
-   text-indent: 0;
-   margin: 1.5% auto;
- }
-
- #about-me>p:last-of-type {
-   width: 75%;
- }
-
- .project {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   width: 90%;
-   margin-left: auto;
- }
-
- .slide-img {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
- }
-
- .project-img {
-   width: 75%;
-   height: auto;
-   object-fit: cover;
-   margin-bottom: 5%;
-   cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:20px;'><text y='50%'>🖱️</text></svg>") 16 0, auto;
- }
-
- .project-description>p {
-   text-indent: 0;
-   margin-top: 1%;
-   width: 95%;
-   font-size: 1.4vw;
-   font-family: 'Judson', serif;
- }
-
- .hidden {
-   position: absolute;
-   width: 1px;
-   height: auto;
-   margin: 0;
-   padding: 0;
-   border: 0;
-   clip: rect(0 0 0 0);
-   overflow: hidden;
-   white-space: nowrap;
- }
-
- .slide-img>button {
-   cursor: pointer;
-   color: white;
-   position: relative;
-   padding: 1vw;
-   margin: 0 0.5%;
-   font-weight: bold;
-   font-size: 20px;
-   transition: 0.6s ease;
-   border-width: 0vw;
-   border-radius: 0 3px 3px 0;
-   user-select: none;
-   text-decoration: none;
-   -webkit-user-select: none;
- }
-
- .slide-img>.prev {
-   border-radius: 3px 0 0 3px;
- }
-
- .slide-img>button:hover {
-   background: #FBAB6A;
-   color: #1A0903;
- }
-
- .project-description>h2 {
-   transition: all 0.2s ease-in-out;
- }
-
- .project-description>h2>a:hover {
-   color: #FBAB6A;
-   cursor: pointer;
- }
-
- .project-description>h2:hover {
-   animation: swingX 0.75s ease;
-   animation-iteration-count: 1;
- }
-
- .scroll-up {
-   border: solid white;
-   color: white;
-   cursor: pointer;
-   border-width: 0 0.3vw 0.3vw 0;
-   display: block;
-   position: fixed;
-   bottom: 10vw;
-   left: 90vw;
-   padding: 0.3vw;
-   margin: 0 0 0 0.45%;
-   transform: rotate(-135deg);
-   -webkit-transform: rotate(-135deg);
-   backface-visibility: hidden;
-   -webkit-backface-visibility: hidden;
- }
-
- .scroll-up:first-of-type {
-   border-width: 0 0.6vw 0.6vw 0;
-   animation: swingY 2s ease infinite;
-   padding: 0.6vw;
-   bottom: 12vw;
-   margin: 0;
- }
-
- .scroll-up:hover {
-   border-color: #FBAB6A;
-   -webkit-animation-play-state: paused;
-   -moz-animation-play-state: paused;
-   -o-animation-play-state: paused;
-   animation-play-state: paused;
- }
-
- #contacts {
-   border-width: 0;
-   position: relative;
-   bottom: 0;
- }
-
- #contacts>h3 {
-   text-align: center;
-   text-indent: 0;
-   margin-bottom: 2%;
-   font-size: 2vw;
- }
-
- .social-media {
-   display: flex;
-   text-indent: 0;
-   align-content: center;
-   justify-content: center;
-   width: 100%;
-   margin: 0 auto;
- }
-
- .social-media>li {
-   display: inline-block;
-   vertical-align: middle;
-   width: 20%;
- }
-
- svg {
-   stroke: white;
-   padding: 0.2vw;
-   width: 100%;
-   cursor: pointer;
-   transition: 0.4s ease;
- }
-
- h3>svg {
-   cursor: auto;
-   width: 5.5%;
-   animation: spin 800ms ease infinite;
-   margin-bottom: 2%;
- }
-
- svg:hover {
-   stroke: #f48025;
- }
-
- #discord {
-   transition: 0.4s ease;
-   padding: 0.1vw;
- }
-
- #discord>svg>path:hover {
-   fill: #f48025;
- }
-
- .active {
-   animation: show .5s;
-   animation-fill-mode: both;
- }
-
- .first {
-   animation: none;
- }
-
- @keyframes spin {
-  to {
-    transform: rotate(360deg);
+  30% {
+    transform: translateX(-2.5px);
   }
- }
 
- @keyframes show {
+  50% {
+    transform: translateX(2.5px);
+  }
+
+  65% {
+    transform: translateX(-2.5px);
+  }
+
+  80% {
+    transform: translateX(2px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes swingY {
+  0% {
+    transform: translateY(-2vw) rotate(-135deg);
+  }
+
+  50% {
+    transform: translateY(2vw) rotate(-135deg);
+  }
+
+  100% {
+    transform: translateY(-2vw) rotate(-135deg);
+  }
+}
+
+@keyframes typing {
   from {
-      transform: scale(0.9);
-      opacity: 0;
+    width: 0;
   }
-  to {
-      transform: scale(1);
-      opacity: 1;
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
   }
- }
+}
 
- @keyframes swingX {
-   15% {
-     transform: translateX(2.5px);
-   }
+@media only screen and (max-width: 768px) {
+  .typing-demo {
+    font-size: 3.33vw;
+    width: 23%;
+  }
 
-   30% {
-     transform: translateX(-2.5px);
-   }
+  .typing-demo:first-of-type {
+    width: 52%;
+  }
 
-   50% {
-     transform: translateX(2.5px);
-   }
+  nav {
+    margin-top: 35%;
+  }
 
-   65% {
-     transform: translateX(-2.5px);
-   }
+  li {
+    font-size: 3.3vw;
+  }
 
-   80% {
-     transform: translateX(2px);
-   }
+  div {
+    width: 100%;
+  }
 
-   100% {
-     transform: translateX(0);
-   }
- }
+  div>h1 {
+    font-size: 4vw;
+  }
 
- @keyframes swingY {
-   0% {
-     transform: translateY(-2vw) rotate(-135deg);
-   }
+  div>h2 {
+    font-size: 3.75vw;
+  }
 
-   50% {
-     transform: translateY(2vw) rotate(-135deg);
-   }
+  #about-me>p {
+    font-size: 3vw;
+    width: 67% !important;
+  }
 
-   100% {
-     transform: translateY(-2vw) rotate(-135deg);
-   }
- }
+  .project {
+    width: 85%;
+    margin-left: auto;
+  }
 
- @keyframes typing {
-   from {
-     width: 0;
-   }
- }
-
- @keyframes blink {
-   50% {
-     border-color: transparent;
-   }
- }
-
- @media only screen and (max-width: 768px) {
-   .typing-demo {
-     font-size: 3vw;
-     width: 23%;
-   }
-
-   .typing-demo:first-of-type {
-     width: 46%;
-   }
-
-   nav {
-     margin-top: 35%;
-   }
-
-   li {
-     font-size: 2.5vw;
-   }
-
-   div {
-     width: 100%;
-   }
-
-   div>h1 {
-     font-size: 4vw;
-   }
-
-   div>h2 {
-     font-size: 3.75vw;
-   }
-
-   #about-me>p {
-     font-size: 2.5vw;
-     width: 67% !important;
-   }
-
-   .project {
-     width: 85%;
-     margin-left: auto;
-   }
-
-   .project-img {
-     width: 65%;
-     margin-bottom: 15%;
-   }
-
-   .project-description>p {
-     font-size: 2.65vw;
-     width: 87.5%;
-   }
-
-   #my-work {
-     width: 85%;
-     margin-bottom: 15%;
-   }
-
-   #about-me {
-     width: 85%;
-   }
-
-   .scroll-up:last-of-type {
-     padding: 0.5vw;
-     left: 90.5vw;
-     border-width: 0 0.5vw 0.5vw 0;
-     position: fixed;
-     margin-bottom: 15%;
-   }
-
-   .scroll-up:first-of-type {
-     padding: 1vw;
-     border-width: 0 1vw 1vw 0;
-     position: fixed;
-     margin-bottom: 15%;
-   }
-
-   #contacts>h3 {
-     font-size: 3.5vw;
-     margin-bottom: 1.5%;
-   }
-
-   svg {
-     width: 60%;
-   }
- }
-
- @media only screen and (min-width: 769px) and (max-width: 1000px) {
-   section>div {
-     margin-bottom: 5%;
-   }
-
-   #my-work {
-     margin-bottom: 12.5%;
-   }
-
-   #contacts>h3 {
-     margin-bottom: 0.5%;
-   }
-
-   svg {
-     width: 75%;
-   }
-
-   .scroll-up {
-     margin-bottom: 12.5% !important;
-   }
-
-   svg {
-     width: 50%;
+  .project-img {
+    width: 65%;
+    margin-bottom: 15%;
   }
 
   .project-description>p {
-    font-size: 2vw;
+    font-size: 3.3vw;
+    width: 87.5%;
   }
+
+  #my-work {
+    width: 85%;
+    margin-bottom: 15%;
+  }
+
+  #about-me {
+    width: 85%;
+  }
+
+  .scroll-up:last-of-type {
+    padding: 0.5vw;
+    left: 90.5vw;
+    border-width: 0 0.5vw 0.5vw 0;
+    position: fixed;
+    margin-bottom: 15%;
+  }
+
+  .scroll-up:first-of-type {
+    padding: 1vw;
+    border-width: 0 1vw 1vw 0;
+    position: fixed;
+    margin-bottom: 15%;
+  }
+
+  #contacts>h3 {
+    font-size: 3.5vw;
+    margin-bottom: 1.5%;
+  }
+
+  svg {
+    width: 60%;
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1000px) {
+  section>div {
+    margin-bottom: 5%;
+  }
+
+  #my-work {
+    margin-bottom: 12.5%;
+  }
+
+  #contacts>h3 {
+    margin-bottom: 0.5%;
+  }
+
+  svg {
+    width: 75%;
+  }
+
+  .scroll-up {
+    margin-bottom: 12.5% !important;
+  }
+
+  svg {
+    width: 50%;
  }
+
+ .project-description>p, #about-me>p {
+   font-size: 2vw;
+ }
+}
