--- a/style.css
+++ b/style.css
@@ -440,7 +440,7 @@ svg {
   padding: 0.2vw;
   width: 100%;
   cursor: pointer;
-  transition: 0.4s ease;
+  transition: stroke 0.6s;
 }
 
 h3>svg {
@@ -454,8 +454,8 @@ svg:hover {
   stroke: #f48025;
 }
 
-#discord {
-  transition: 0.4s ease;
+#discord>svg>path {
+  transition: fill 0.6s;
   padding: 0.1vw;
 }
 
