--- a/style.css
+++ b/style.css
@@ -204,10 +204,9 @@ li>a:hover {
   font-size: 2.5vw;
 }
 
+/* darkmode styles */
 .darkmode-toggle {
   font-size: 1.25rem;
-  width: 2.5rem;
-  height: 2.5rem;
 }
 
 .darkmode--activated .project-description>p {
@@ -216,7 +215,7 @@ li>a:hover {
 
 .darkmode--activated .scroll-up {
   border: solid black;
-  border-width: 0 0.3vw 0.3vw 0;
+  border-width: 0 0.5vw 0.5vw 0;
 }
 
 .darkmode--activated .first>.project-description>p {
@@ -427,26 +426,19 @@ div>h2>a {
 .scroll-up {
   border: solid white;
   cursor: pointer;
-  border-width: 0 0.3vw 0.3vw 0;
+  border-width: 0 0.5vw 0.5vw 0;
   display: block;
   position: fixed;
   bottom: 10vw;
   left: 90vw;
-  padding: 0.3vw;
+  padding: 0.5vw;
   margin: 0 0 0 0.45%;
   transition: border-color 0.4s ease-in;
   transform: rotate(-135deg);
   -webkit-transform: rotate(-135deg);
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
-}
-
-.scroll-up:first-of-type {
-  border-width: 0 0.6vw 0.6vw 0;
   animation: swingY 2s ease infinite;
-  padding: 0.6vw;
-  bottom: 12vw;
-  margin: 0;
 }
 
 .scroll-up:hover {
@@ -650,17 +642,10 @@ svg:hover {
     width: 85%;
   }
 
-  .scroll-up:last-of-type {
-    padding: 0.5vw;
+  .scroll-up {
+    padding: 0.7vw;
     left: 90.5vw;
-    border-width: 0 0.5vw 0.5vw 0;
-    position: fixed;
-    margin-bottom: 15%;
-  }
-
-  .scroll-up:first-of-type {
-    padding: 1vw;
-    border-width: 0 1vw 1vw 0;
+    border-width: 0 0.7vw 0.7vw 0;
     position: fixed;
     margin-bottom: 15%;
   }
