--- a/style.css
+++ b/style.css
@@ -68,6 +68,71 @@ body {
   --brick: #7F2611;
 }
 
+/* darkmode styles start */
+.darkmode-toggle {
+  font-size: 1.25rem;
+  padding: 0;
+}
+
+.darkmode--activated .project-description>p {
+  color: black;
+}
+
+.darkmode--activated .scroll-up {
+  border: solid black;
+  border-width: 0 0.5vw 0.5vw 0;
+}
+
+.darkmode--activated .first>.project-description>p {
+  color: white;
+}
+
+.darkmode--activated .slide-img>button {
+  color: var(--black);
+}
+
+.darkmode--activated #about-me>h1, .darkmode--activated .first>.project-description>h2>a {
+  --dark-orange: #0176D8;
+  --darker-orange: #0B7FDA;
+}
+
+.darkmode--activated .project-description>h2>a:hover {
+  color: var(--brown);
+}
+
+.darkmode--activated #about-me>p>a, .darkmode--activated #about-me>p>a:visited {
+  --dark-orange: #80D9EE;
+  --brick: #80D9EE;
+  color: black !important;
+}
+
+.darkmode--activated #about-me>p:nth-of-type(3)>span {
+  --brown: #73B7D3;
+  color: black !important;
+}
+
+.darkmode--activated .typing-demo, .darkmode--activated #contacts>h3, .darkmode--activated svg {
+  color: black;
+  stroke: black;
+}
+
+.darkmode--activated #discord>svg>path {
+  fill: black;
+}
+
+.darkmode--activated #discord>svg>path:hover {
+  fill: var(--dark-orange);
+}
+
+.darkmode--activated #contacts>h3>svg:first-of-type>g>path:first-of-type {
+  stroke: black !important;
+}
+
+.darkmode--activated .clown-eye {
+  fill: black !important;
+}
+/* darkmode styles end */
+
 li>a {
   color: var(--black);
   text-decoration: none;
@@ -202,69 +267,6 @@ li>a:hover {
   text-indent: 0;
   border-right: 0.25vw solid;
   font-size: 2.5vw;
-}
-
-/* darkmode styles */
-.darkmode-toggle {
-  font-size: 1.25rem;
-}
-
-.darkmode--activated .project-description>p {
-  color: black;
-}
-
-.darkmode--activated .scroll-up {
-  border: solid black;
-  border-width: 0 0.5vw 0.5vw 0;
-}
-
-.darkmode--activated .first>.project-description>p {
-  color: white;
-}
-
-.darkmode--activated .slide-img>button {
-  color: var(--black);
-}
-
-.darkmode--activated #about-me>h1, .darkmode--activated .first>.project-description>h2>a {
-  --dark-orange: #0176D8;
-  --darker-orange: #0B7FDA;
-}
-
-.darkmode--activated .project-description>h2>a:hover {
-  color: var(--brown);
-}
-
-.darkmode--activated #about-me>p>a, .darkmode--activated #about-me>p>a:visited {
-  --dark-orange: #80D9EE;
-  --brick: #80D9EE;
-  color: black !important;
-}
-
-.darkmode--activated #about-me>p:nth-of-type(3)>span {
-  --brown: #73B7D3;
-  color: black !important;
-}
-
-.darkmode--activated .typing-demo, .darkmode--activated #contacts>h3, .darkmode--activated svg {
-  color: black;
-  stroke: black;
-}
-
-.darkmode--activated #discord>svg>path {
-  fill: black;
-}
-
-.darkmode--activated #discord>svg>path:hover {
-  fill: var(--dark-orange);
-}
-
-.darkmode--activated #contacts>h3>svg:first-of-type>g>path:first-of-type {
-  stroke: black !important;
-}
-
-.darkmode--activated .clown-eye {
-  fill: black !important;
 }
 
 .typing-demo:first-of-type {
